JVM demo